# SennaCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ast.hpp  flags.hpp  ir_builder.hpp  ir_print.hpp  op_types.hpp  semantic.hpp
include/backend/: llvm_emit.hpp
include/cli/: explainer.hpp  flags.hpp
include/dumper/: ast_print.hpp  cfg_print.hpp  doms_print.hpp  dot_print.hpp
include/frontend/: ast.hpp  op_types.hpp  semantic.hpp
include/midend/cfg/: cfg_builder.hpp
include/midend/dom/: dom_tree.hpp
include/midend/fdom/: dom_front.hpp
include/midend/ir/: ir.hpp  ir_builder.hpp  ir_verify.hpp
include/midend/opts/: const_fold_prop.hpp  dce.hpp  exp_simplifier.hpp
include/midend/ssa/: mem2reg.hpp  phi_node.hpp  phi_placement.hpp  ssa_verifier.hpp
samples/: basic.sn  dce.sn  exp.sn  fact.sn  fib_rec.sn  if_input.sn  if_while.sn  input_comp.sn  prop.sn  summary_test.sn  while.sn
scripts/: dot2png.sh
src/: CMakeLists.txt  CmakeLists.txt  main.cpp
src/backend/: llvm_emit.cpp
src/dumper/: ast_print.cpp  cfg_print.cpp  doms_print.cpp  dot_print.cpp  ir_print.cpp
src/frontend/: lexer.l  parser.y  semantic.cpp
src/graph_dump/: dot_print.cpp  dot_print.hpp
src/midend/cfg/: cfg_builder.cpp
src/midend/dom/: dom_tree.cpp
src/midend/fdom/: dom_front.cpp
src/midend/ir/: ir.cpp  ir_builder.cpp  ir_verify.cpp
src/midend/opts/: const_fold_prop.cpp  dce.cpp  exp_simplifier.cpp
src/midend/ssa/: mem2reg.cpp  phi_node.cpp  phi_placement.cpp  ssa.cpp  ssa_verifier.cpp
tests/: CMakeLists.txt  simple.sn  summary_test.sn
tests/e2e_tests/: CMakeLists.txt  test_e2e.cpp
tests/e2e_tests/cases/: 01_edge_empty.sn  02_math_precedence.sn  03_div_by_zero_fold.sn  04_fib_recursion.sn
tests/e2e_tests/expected/: 02_math_precedence.txt
tests/unit_tests/: CMakeLists.txt  test_ast.cpp  test_dom.cpp  test_ir.cpp  test_opts.cpp  test_semantic.cpp
